<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/text_label"
            style="@style/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/header_choosecity" />

        <Button
            android:id="@+id/btn_newcity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_label"
            android:text="@string/add_city" />

        <Spinner
            android:id="@+id/city_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/text_label"
            android:layout_toLeftOf="@+id/btn_newcity"></Spinner>

        <TextView
            android:id="@+id/text_label_servicedetail"
            style="@style/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/city_choose"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="Информация по службе" />

        <TextView
            android:id="@+id/text_label_servicename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_servicedetail"
            android:text="@string/label_name"
            android:textStyle="bold"

          style="@style/label_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_servicedetail"
            android:layout_toRightOf="@id/text_label_servicename" />

        <TextView
            android:id="@+id/text_label_tel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_servicename"
            android:layout_marginTop="20dp"
            android:text="@string/label_tel1"
            style="@style/label_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_servicename"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/text_label_tel1" />

        <TextView
            android:id="@+id/text_label_tel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_tel1"
            android:layout_marginTop="20dp"
            android:text="@string/label_tel2"
            style="@style/label_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_tel1"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/text_label_tel1" />

        <TextView
            android:id="@+id/text_label_tel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_tel2"
            android:layout_marginTop="20dp"
            android:text="@string/label_tel3"
            style="@style/label_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_tel2"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/text_label_tel3" />

        <TextView
            android:id="@+id/text_label_tel4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_tel3"
            android:layout_marginTop="20dp"
            android:text="@string/label_tel4"
            style="@style/label_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_tel3"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/text_label_tel4" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_label_tel4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_sendforadd_text" />
    </RelativeLayout>
</ScrollView>